update copyright info

--- a/Makefile.toolchain
+++ b/Makefile.toolchain
@@ -1,10 +1,6 @@
-# -*- makefile -*-
-# Copyright (c) 2012 The Chromium OS Authors. All rights reserved.
+# Copyright (c) 2013 The F9 Microkernel Project. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
-#
-# Toolchain configuration build system
-#
 
 # Toolchain configuration
 CROSS_COMPILE ?= arm-none-eabi-
