--- a/mk/Config.in
+++ b/mk/Config.in
@@ -2,15 +2,26 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-mainmenu "F9 microkernel Configurations"
+mainmenu "F9 Microkernel Configurations"
 
-choice
-	prompt "Architecture"
-	default TARGET_arm
-	help
-	  The architecture of your target.
+config KPROBES
+	bool "KProbes: dynamic instrumentation system"
+	default y
 
-config TARGET_arm
-	bool "ARM"
+config SYMMAP
+	bool "Generate symbol map"
+	default y
+	depends on KPROBES
 
-endchoice
+config BITMAP_BITBAND
+	bool "Generate bitmap address in bit-band region"
+	default y
+
+config PANIC_DUMP_STACK
+	bool "Dump kernel stack while panic"
+	default y
+
+# FIXME: it is just a hack to prevent doubly including.
+config DONE
+	bool
+	default y
