--- a/external/kconfig/Makefile.f9
+++ b/external/kconfig/Makefile.f9
@@ -10,7 +10,7 @@ include Makefile
 #HOSTCFLAGS+=-Dinline="" -include foo.h
 -include $(obj)/.depend
 $(obj)/.depend: $(wildcard *.h *.c)
-	$(HOSTCC) $(HOST_EXTRACFLAGS) $(HOSTCFLAGS) -MM *.c > $@ 2>/dev/null || :
+	@$(HOSTCC) $(HOST_EXTRACFLAGS) $(HOSTCFLAGS) -MM *.c > $@ 2>/dev/null || :
 
 __hostprogs := $(sort $(hostprogs-y) $(hostprogs-m))
 host-csingle := $(foreach m,$(__hostprogs),$(if $($(m)-objs),,$(m)))
@@ -53,3 +53,4 @@ distclean: clean
 
 FORCE:
 .PHONY: FORCE clean distclean
+.SECONDARY:
