Support FPU context handling.
Fixes #9

While context switching, FPU registers saving and restoring are
supported, and EXC_RETURN[4] in lr is used for identifying FPU context
and save/restore FPU registers if needed.

--- a/mk/Config.in
+++ b/mk/Config.in
@@ -86,3 +86,8 @@ config PANIC_DUMP_STACK
 	bool "Dump kernel stack while panic"
 	default y
 
+config FPU
+	bool "Floating point support"
+	default n
+
+
