--- a/mk/Config.in
+++ b/mk/Config.in
@@ -33,6 +33,7 @@ config KTIMER_TICKLESS
 
 config KTIMER_TICKLESS_VERIFY
 	bool "Track tickless scheduling status"
+	depends on KTIMER_TICKLESS
 	default n
 
 config KTIMER_HEARTBEAT
