kdb:  select DEBUG when using kdb
Developer requires debug I/O channel to communicate with KDB

Signed-off-by: Viller Hsiao <villerhsiao@gmail.com>

--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -63,6 +63,7 @@ config DEBUG
 config KDB
 	bool "Kdb: kernel debugger"
 	default y
+	select DEBUG
 
 config KPROBES
 	bool "KProbes: dynamic instrumentation system"
