debug: exclude KDB and non-uart stdio port
Signed-off-by: Viller Hsiao <villerhsiao@gmail.com>

--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -68,6 +68,7 @@ config KDB
 	bool "Kdb: kernel debugger"
 	default y
 	select DEBUG
+	select DEBUG_DEV_UART
 
 config KPROBES
 	bool "KProbes: dynamic instrumentation system"
