platform: Disable bitmap bit-band because as userspace workaround
At present, there is no enough space for generating bitmap in bit-band
regions when larger userspace is introduced.

--- a/platform/Kconfig
+++ b/platform/Kconfig
@@ -6,7 +6,7 @@ menu "Platform"
 
 config BITMAP_BITBAND
 	bool "Generate bitmap address in bit-band region"
-	default y
+	default n
 
 config FPU
 	bool "Floating point support"
