make USART pin assignment configurable
Fixes #62

In preparation of new boards support other than STM32F4 Discovery, it is
necessary to make the USART pin assignment configurable. At present, both
USART4 (default) and USART2 of STM32F4DISCOVERY are supported depending on
Kconfig results.

--- a/platform/Kconfig
+++ b/platform/Kconfig
@@ -27,4 +27,17 @@ config STDIO_USE_DBGPORT
 
 endchoice
 
+choice
+
+	prompt "Debug serial IO uses"
+	default DBGPORT_USE_USART4
+	depends on STDIO_USE_DBGPORT
+
+config DBGPORT_USE_USART2
+	bool "USART2"
+config DBGPORT_USE_USART4
+	bool "USART4"
+
+endchoice
+
 endmenu
