add DBGPORT_USE_USART1 options Should pick up it for STM32F429I discovery board

--- a/platform/Kconfig
+++ b/platform/Kconfig
@@ -33,6 +33,8 @@ choice
 	default DBGPORT_USE_USART4
 	depends on STDIO_USE_DBGPORT
 
+config DBGPORT_USE_USART1
+	bool "USART1"
 config DBGPORT_USE_USART2
 	bool "USART2"
 config DBGPORT_USE_USART4
