--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,14 @@ language: c
 compiler: gcc
 env: BOARD=discoveryf4
 
-install:
-  - sudo apt-get install build-essential gcc-arm-none-eabi
+before_install:
+  - sudo apt-get install build-essential
+  - sudo add-apt-repository --yes ppa:terry.guo/gcc-arm-embedded
+  - sudo apt-get update
+  - sudo apt-get install gcc-arm-none-eabi
 
 script:
   - cp -f board/$BOARD/defconfig .config
+  - cp -f board/$BOARD/autoconf.h include/autoconf.h
   - make
   - arm-none-eabi-size build/$BOARD/f9.elf
-
-before_install:
-  - sudo apt-get install build-essential gcc-arm-none-eabi
