--- a/user/apps/Kconfig
+++ b/user/apps/Kconfig
@@ -1,11 +1,10 @@
 # Copyright (c) 2013 The F9 Microkernel Project. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
-ifeq ($(CONFIG_GPIOER_APP), y)
-user-apps-dirs=gpioer
-else
-user-apps-dirs = \
-	l4test \
-	pingpong
-endif
+
+menu "Applications"
+config GPIOER_APP
+	bool "only include gpio device application"
+	default n
+endmenu
 
