--- a/platform/Kconfig
+++ b/platform/Kconfig
@@ -11,6 +11,9 @@ choice
 config BOARD_STM32F4DISCOVERY
 	bool "STM32F4"
 
+config BOARD_STM32F429DISCOVERY
+	bool "STM32F429"
+
 endchoice
 
 config BITMAP_BITBAND
