platform: Add stm32-p103 support 	qemu simulation enabled

--- a/platform/Kconfig
+++ b/platform/Kconfig
@@ -14,6 +14,9 @@ config BOARD_STM32F4DISCOVERY
 config BOARD_STM32F429DISCOVERY
 	bool "STM32F429"
 
+config BOARD_STM32P103
+	bool "STM32P103"
+
 endchoice
 
 config BITMAP_BITBAND
