--- a/platform/Kconfig
+++ b/platform/Kconfig
@@ -65,4 +65,7 @@ endchoice
 if BOARD_STM32F4DISCOVERY
 source platform/stm32f4/Kconfig
 endif
+if BOARD_STM32F429DISCOVERY
+source platform/stm32f429/Kconfig
+endif
 endmenu
