Kconfig: add Kconfig for stm32f1

--- a/platform/Kconfig
+++ b/platform/Kconfig
@@ -68,4 +68,8 @@ endif
 if BOARD_STM32F429DISCOVERY
 source platform/stm32f429/Kconfig
 endif
+if BOARD_STM32P103
+source platform/stm32f1/Kconfig
+endif
+
 endmenu
