--- a/user/Kconfig
+++ b/user/Kconfig
@@ -1,11 +1,18 @@
-# Copyright (c) 2015 The F9 Microkernel Project. All rights reserved.
+# Copyright (c) 2015-2017 The F9 Microkernel Project. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-menu "Test Case"
-config EXTI_INTERRUPT_TEST
-	bool "EXTI interrupt test case"
+menu "User Space"
+
+config BUILD_USER_APPS
+	bool "Build user applications for F9 microkernel"
 	default n
-	depends on EXTI0_USER_IRQ && EXTI1_USER_IRQ
+	---help---
+		Enable this options to will compile userspace apps
+		into f9-kernel, This may let you unable to use kdb.
+
+source "user/Kconfig.apps"
+
+source "user/Kconfig.tests"
 
 endmenu
