sched-rr: A round-robin scheduler for normal thread
This is a round-robin scheduler implement for normal thread (user-thread)
create by pager or pthread lib, and using timeslice, we can prevent user-space
thread starvation trigger by busy loop.

This scheduler only schedling user thread create by ipc "thread start protocal".

Default timeslice is 4096 ticks for now.

Other trivial change:
- Update defconfing for all board
- Add sched-rr into Makefile
- Add new config in kernel/Kconfig for setting thread timeslice

--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -71,6 +71,10 @@ menu "Thread tweaks"
 config INTR_THREAD_MAX
 	int "Maximum of interrupt threads"
 	default 256
+
+config THREAD_TIME_SLICE
+	int "Maximum timeslice for threads"
+	default 4096
 endmenu
 
 menu "KIP tweaks"
