--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ env:
 
 before_install:
   - sudo apt-get install build-essential
-  - sudo add-apt-repository --yes ppa:terry.guo/gcc-arm-embedded
-  - sudo apt-get update
-  - sudo apt-get install gcc-arm-none-eabi -y --force-yes
+  - sudo add-apt-repository -y ppa:team-gcc-arm-embedded/ppa
+  - sudo apt-get update -qq
+  - sudo apt-get install -y gcc-arm-embedded
 
 script:
   - cp -f board/$BOARD/defconfig .config
