build: Migrate to Kconfiglib
This replaces the old Linux kernel kconfig C tooling with Kconfiglib,
a Python-based Kconfig implementation from sysprog21/Kconfiglib.

New usage:
  make list-boards              # Show available boards
  make discoveryf4_defconfig    # Configure for STM32F4 Discovery
  make discoveryf429_defconfig  # Configure for STM32F429 Discovery
  make stm32p103_defconfig      # Configure for STM32P103
  make config                   # Interactive menuconfig
  make savedefconfig            # Save to board/<BOARD>/defconfig

The board selection now appears first in menuconfig, and platform
is automatically selected based on the board choice using Kconfig
'select' statements.

--- a/Kconfig
+++ b/Kconfig
@@ -2,6 +2,10 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-# Configuration is now handled by Kconfiglib (tools/kconfig/).
-# The root Kconfig file sources all sub-Kconfigs directly.
-# See: https://github.com/sysprog21/Kconfiglib
+mainmenu "F9 Microkernel Configurations"
+
+source "board/Kconfig"
+source "platform/Kconfig"
+source "kernel/Kconfig"
+source "loader/Kconfig"
+source "user/Kconfig"
