--- a/platform/Kconfig
+++ b/platform/Kconfig
@@ -4,21 +4,6 @@
 
 menu "Platform"
 
-choice
-	prompt "Platform"
-	default BOARD_STM32F4DISCOVERY
-
-config BOARD_STM32F4DISCOVERY
-	bool "STM32F4"
-
-config BOARD_STM32F429DISCOVERY
-	bool "STM32F429"
-
-config BOARD_STM32P103
-	bool "STM32P103"
-
-endchoice
-
 config BITMAP_BITBAND
 	bool "Generate bitmap address in bit-band region"
 	default n
@@ -26,12 +11,12 @@ config BITMAP_BITBAND
 config FPU
 	bool "Floating point support"
 	default n
-	depends on !BOARD_STM32P103
+	depends on !PLATFORM_STM32F1
 
 config SEMIHOST
 	bool "Semihosting enable"
 	default n
-	depends on BOARD_STM32P103
+	depends on PLATFORM_STM32F1
 
 choice
 	prompt "Standard I/O device"
@@ -62,14 +47,14 @@ config DBGPORT_USE_USART4
 
 endchoice
 
-if BOARD_STM32F4DISCOVERY
-source platform/stm32f4/Kconfig
+if PLATFORM_STM32F4
+source "platform/stm32f4/Kconfig"
 endif
-if BOARD_STM32F429DISCOVERY
-source platform/stm32f429/Kconfig
+if PLATFORM_STM32F429
+source "platform/stm32f429/Kconfig"
 endif
-if BOARD_STM32P103
-source platform/stm32f1/Kconfig
+if PLATFORM_STM32F1
+source "platform/stm32f1/Kconfig"
 endif
 
 endmenu
