board: replace stm32p103 with netduinoplus2 for QEMU support
Replace Olimex STM32-P103 (STM32F1) with Netduino Plus 2 (STM32F4)
as the QEMU-emulatable board target.

The netduinoplus2 machine is supported by upstream QEMU, enabling
full system emulation for development and testing without hardware.

Changes:
- Remove board/stm32p103/ (STM32F103RBT6, no QEMU support)
- Add board/netduinoplus2/ (STM32F405RGT6, QEMU supported)
- Add CONFIG_QEMU option for emulation-specific workarounds
- Remove PLATFORM_STM32F1 (no longer used)
- Update discovery board defconfigs

The QEMU config enables workarounds for emulation limitations such
as unreliable USART TXE interrupts and missing CCM RAM.

--- a/board/Kconfig
+++ b/board/Kconfig
@@ -22,13 +22,25 @@ config BOARD_STM32F429DISCOVERY
 	help
 	  STM32F429 Discovery board with STM32F429ZIT6 MCU and LCD.
 
-config BOARD_STM32P103
-	bool "Olimex STM32-P103"
-	select PLATFORM_STM32F1
+config BOARD_NETDUINOPLUS2
+	bool "Netduino Plus 2"
+	select PLATFORM_STM32F4
 	help
-	  Olimex STM32-P103 board with STM32F103RBT6 MCU.
+	  Netduino Plus 2 board with STM32F405RGT6 MCU.
+	  This board is supported by upstream QEMU for emulation.
 
 endchoice
+
+config QEMU
+	bool "QEMU emulation mode"
+	default y if BOARD_NETDUINOPLUS2
+	help
+	  Enable workarounds for QEMU emulation limitations:
+	  - Use synchronous UART output (QEMU TXE interrupt unreliable)
+	  - Place bitmaps in regular SRAM (QEMU lacks CCM RAM emulation)
+
+	  Enable this when running under QEMU. Disable for real hardware
+	  to get better performance.
 
 endmenu
 
@@ -37,7 +49,4 @@ config PLATFORM_STM32F4
 	bool
 
 config PLATFORM_STM32F429
-	bool
-
-config PLATFORM_STM32F1
 	bool
