--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,13 +2,16 @@ name: Build
 
 on:
   push:
-    branches: [ master, main ]
+    branches: [ master ]
   pull_request:
-    branches: [ master, main ]
+    branches: [ master ]
+
+permissions:
+  contents: read
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
         board: [discoveryf4, discoveryf429, netduinoplus2]
@@ -17,9 +20,9 @@ jobs:
     - uses: actions/checkout@v6
 
     - name: Install ARM toolchain
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y gcc-arm-none-eabi
+      uses: carlosperate/arm-none-eabi-gcc-action@v1
+      with:
+        release: '15.2.Rel1'
 
     - name: Configure for ${{ matrix.board }}
       run: make ${{ matrix.board }}_defconfig
@@ -31,32 +34,19 @@ jobs:
       run: arm-none-eabi-size build/${{ matrix.board }}/f9.elf
 
     - name: Upload artifacts
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v6
       with:
         name: f9-${{ matrix.board }}
         path: |
           build/${{ matrix.board }}/f9.elf
           build/${{ matrix.board }}/f9.bin
 
-  qemu-test:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-    - uses: actions/checkout@v6
-
-    - name: Download netduinoplus2 artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: f9-netduinoplus2
-        path: build/netduinoplus2
-
     - name: Install QEMU
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y qemu-system-arm
+      if: matrix.board == 'netduinoplus2'
+      run: sudo apt-get update && sudo apt-get install -y qemu-system-arm
 
     - name: QEMU boot test
+      if: matrix.board == 'netduinoplus2'
       run: |
         timeout 15s qemu-system-arm \
           -M netduinoplus2 \
@@ -68,23 +58,17 @@ jobs:
         cat qemu.log
         echo "==================="
 
-        # Check for successful boot indicators
         if grep -q "Press '?' to print KDB menu" qemu.log; then
-          echo "✓ KDB shell ready"
-          exit 0
+          echo "✓ KDB shell ready"; exit 0
         elif grep -q "KDB" qemu.log; then
-          echo "✓ KDB initialized"
-          exit 0
-        elif grep -q "f9" qemu.log || grep -q "F9" qemu.log; then
-          echo "✓ Kernel boot detected"
-          exit 0
+          echo "✓ KDB initialized"; exit 0
+        elif grep -q "f9\|F9" qemu.log; then
+          echo "✓ Kernel boot detected"; exit 0
         fi
 
-        # Check for crash indicators
-        if grep -q "MEMFAULT\|HardFault\|panic" qemu.log; then
-          echo "✗ Kernel crash detected"
-          exit 1
+        if grep -qE "MEMFAULT|HardFault|panic" qemu.log; then
+          echo "✗ Kernel crash detected"; exit 1
         fi
 
-        echo "⚠ No boot message detected (timeout or minimal output)"
-        exit 0
+        echo "✗ No boot message detected (timeout or minimal output)"
+        exit 1
