l4test: Add test suite completion marker for CI
Print "L4/Pistachio test suite complete" after all tests finish.
This allows CI to detect successful test completion and exit early,
rather than waiting for the full timeout while pingpong runs forever.

Update CI workflow to:
- Exit successfully when "test suite complete" is detected
- Fail explicitly if tests started but didn't complete (timeout)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,9 +84,16 @@ jobs:
         fi
 
         # Check for test results if tests ran
-        if grep -q "test suite" qemu.log; then
+        if grep -q "test suite complete" qemu.log; then
           ok_count=$(grep -c "OK" qemu.log || echo 0)
-          echo "✓ Tests passed: $ok_count"
+          echo "✓ Test suite complete: $ok_count tests passed"
+          exit 0
+        fi
+
+        # Fallback: tests started but didn't complete
+        if grep -q "test suite starts" qemu.log; then
+          echo "✗ Test suite started but did not complete (timeout)"
+          exit 1
         fi
 
         exit 0
